--- a/src/app/components/sgquiz/sgquiz.component.html
+++ b/src/app/components/sgquiz/sgquiz.component.html
@@ -7,12 +7,27 @@
       <li><a href="http://localhost:4200/aiquiz">AI Quiz</a></li>
     </ul>
   </nav>
-  <a routerLink="register" *ngIf="!this.isLogged" class="cta" href="#"><button class="cta1"
+  <a *ngIf="!this.isLogged" class="cta" href="http://localhost:4200/register"><button class="cta1"
       (click)="this.nav()">LOGIN</button></a>
   <a class="cta" *ngIf="this.isLogged"><button class="cta1" (click)="this.logout()">Logout</button></a>
 </header>
 
 <body>
+  <div class="alert success-alert" *ngIf="this.isReg">
+    <div class="icon">&#10004;</div>
+    <h3>{{this.sucMsg}}</h3>
+  </div>
+
+  <div class="alert danger-alert" *ngIf="this.iserror">
+    <div class="icon">&#10060;</div>
+    <h3>{{this.errMsg}}</h3>
+  </div>
+
+  <div class="alert warning-alert" *ngIf="this.iswarn">
+    <div class="icon">&#9888;</div>
+    <h3>{{this.warnMsg}}</h3>
+  </div>
+
   <div *ngIf="!this.hide">
     <form [formGroup]="myForm" (ngSubmit)="submit()">
       <label>Question Goes here </label>
