--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -15,7 +15,7 @@ button {
     font-family: "montserrat", sans-serif;
     font-weight: 500;
     font-style: 16px;
-    color: #edf0f1;
+    color: #123d7e;
     text-decoration: none;
 
 }
@@ -23,7 +23,7 @@ button {
 .logo {
     margin-right: auto;
     cursor: pointer;
-    color: white;
+    color: #179ea6;
 }
 
 header {
@@ -33,7 +33,7 @@ header {
     justify-content: flex-end;
     align-items: center;
     padding: 1px 5%;
-    background-color: #004f88;
+    background-color: #ffc649;
 }
 
 .nav_links {
@@ -52,7 +52,7 @@ header {
 }
 
 .nav_links li a:hover {
-    color: #ffc259;
+    color: #179ea6;
 }
 
 .nav {
@@ -62,8 +62,8 @@ header {
 .cta1 {
     margin: 20px;
     padding: 6px 25px;
-    background-color: #ffc259;
-    color: black;
+    background-color: #156c8e;
+    color: white;
     border: none;
     border-radius: 50px;
     cursor: pointer;
@@ -72,7 +72,7 @@ header {
 }
 
 .cta1:hover {
-    background-color: black;
+    background-color: #179ea6;
     color: white;
 }
 
@@ -82,12 +82,19 @@ section {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: #fbdc61;
+    background: #179ea6;
     font-size: 100px;
+    background-image: url("/src/assets/lap.jpg");
 }
-
-section:nth-child(odd) {
-    background: #000;
+section:nth-child(2){
+    background: #123d7e;
+}
+section:nth-child(1) {
+    background: #123d7e;
+    background-image: url("https://cdn.pixabay.com/photo/2016/03/26/13/09/cup-of-coffee-1280537_1280.jpg");
+    background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
 }
 
 h3 {
@@ -151,15 +158,18 @@ h3 {
 
 .arrow-button {
     display: flex;
-    color: #C2FFE9;
-    background-color: #004f88;
-    padding: 10px 16px;
+   color: #fff;
+    background-color: #123d7e;
+    padding: 6px 16px;
     border-radius: 20px;
     transition: all .3s ease;
     font-weight: bold;
     cursor: pointer;
     align-items: center;
     font-size: 14px;
+}
+.og-arrow{
+    color: white;
 }
 
 .arrow-button>.arrow {
@@ -175,7 +185,7 @@ h3 {
 
 .arrow-button>.arrow::before {
     display: block;
-    background-color: currentColor;
+    background-color: white;
     width: 3px;
     transform-origin: bottom right;
     height: 2px;
@@ -190,7 +200,7 @@ h3 {
 
 .arrow-button:hover>.arrow {
     transform: rotate(-45deg) translate(4px, 4px);
-    border-color: text-hover-color;
+    border-color: navajowhite;
 }
 
 .arrow-button:hover>.arrow::before {
@@ -199,7 +209,7 @@ h3 {
 }
 
 .arrow-button:hover {
-    background-color: #000;
+    background-color:#179ea6;
     color: #fff;
 }
 
@@ -214,12 +224,20 @@ h3 {
 }
 
 .card {
-    width: 300px;
+     width: 300px;
     background-color: #ffffff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     overflow: hidden;
     margin: 10px;
+    display: flex;
+    align-items: center; 
+    /* From https://css.glass */
+background: rgba(250, 250, 250, 0.2);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(7.2px);
+-webkit-backdrop-filter: blur(7.2px);
 }
 
 .card-image1 {
@@ -228,6 +246,7 @@ h3 {
     background-image: url('https://etimg.etb2bimg.com/photo/100062546.cms');
     background-size: cover;
     background-position: center;
+display: flex;
 }
 
 .card-image2 {
@@ -249,13 +268,14 @@ h3 {
 
 .card-text {
     font-size: 14px;
-    color: #666;
+    color: white;
 }
 
 .btn {
     display: inline-block;
+    align-items: center;
     padding: 8px 16px;
-    background-color: #007bff;
+    background-color: #179ea6;
     color: #fff;
     border: none;
     border-radius: 5px;
