--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,7 +7,7 @@
       <li><a href="#contact">Contact</a></li>
     </ul>
     </nav>
-    <button class="arrow-button" style="background-color: crimson;" (click)="this.toQuiz()"><a routerLink="quiz" href="">Take Instant Quiz</a><span class="arrow"></span>
+    <button class="arrow-button"  (click)="this.toQuiz()"><a class="og-arrow"routerLink="quiz" href="">Take Instant Quiz</a><span class="arrow"></span>
     </button>
     <a routerLink="register" *ngIf="!this.isLogged" class="cta" href="#"><button class="cta1" (click)="this.nav()">LOGIN</button></a>
     <a class="cta" *ngIf="this.isLogged" routerLink="profile"><button class="cta1" (click)="this.profile()">Profile</button></a>
@@ -16,7 +16,7 @@
   <section id="home">
     <div class="card-container">
       <div class="card">
-        <div class="card-image1"></div>
+        <!-- <div class="card-image1"></div> -->
         <div class="card-content">
           <h2 class="card-title">Experience AI Quiz</h2>
           <p class="card-text">Get Ready to unravel the mysteries of AI and put your knowledge to the test, buckle up and 
@@ -25,7 +25,7 @@
         </div>
       </div>
       <div class="card">
-        <div class="card-image2"></div>
+        <!-- <div class="card-image2"></div> -->
         <div class="card-content">
           <h2 class="card-title">Generate Your Own Quiz</h2>
           <p class="card-text">Get ready to dive into a world of user-generated questions that will both entertain and challenge you ajksksksksksksk!</p>
