--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,21 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
+
 <header>
-  <h3 class="logo" routerLink="">QUIZKR</h3>
+  <h3 class="logo" routerLink="" >QUIZKR</h3>
   <nav>
     <ul class="nav_links">
-      <li><a href="profile">Profile</a></li>
-      <li><a href="price">Pricing</a></li>
+      <li><a href="#et">Profile</a></li>
+      <li><a href="#price">Pricing</a></li>
     </ul>
   </nav>
-  <button class="arrow-button" style="background-color: crimson;" (click)="this.toQuiz()"><a routerLink="quiz"
+  <button class="arrow-button" (click)="this.toQuiz()"><a class="og-arrow"routerLink="quiz"
       href="">Take Instant Quiz</a><span class="arrow"></span>
   </button>
+  <a routerLink="register" *ngIf="!this.isLogged" class="cta" href="#"><button class="cta1" (click)="this.nav()">LOGIN</button></a>
   <a class="cta" *ngIf="this.isLogged"><button class="cta1" (click)="this.logout()">Logout</button></a>
 </header>
 
 <body>
-  <section id="profile">
+  <section id="et" >
+    <div class="alert success-alert" *ngIf="this.isReg">
+      <div class="icon">&#10004;</div>
+      <h3>{{this.sucMsg}}</h3>
+      </div>
+    
+      <div class="alert danger-alert" *ngIf="this.iserror">
+      <div class="icon">&#10060;</div>
+      <h3>{{this.errMsg}}</h3>
+      </div>
+    
+      <div class="alert warning-alert" *ngIf="this.iswarn">
+      <div class="icon">&#9888;</div>
+      <h3>{{this.warnMsg}}</h3>
+      </div>
     <div class="profile-card">
       <div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
         <div class="card p-4">
@@ -27,14 +41,14 @@
             </button>
             <span class="name mt-3">{{this.name}}</span> <span class="idd">@{{this.email}}</span>
             <div *ngIf="!this.isSub" class="d-flex flex-row justify-content-center align-items-center gap-2"> <span
-                class="idd1"> 🌱Quiz Enthusiast 🌱</span>  </div>
+                class="idd1"> Quiz Enthusiast </span>  </div>
             <div *ngIf="this.isSub" class="d-flex flex-row justify-content-center align-items-center gap-2"> <span
-                class="idd1">🔥 Subscribed QuizKR 🔥</span>  </div>
+                class="idd1">Subscribed QuizKR 🔥</span>  </div>
             <div class="d-flex flex-row justify-content-center align-items-center mt-3">
               <span class="number">{{this.tleft}} <span class="follow">Number of Quiz Turns Left</span></span>
             </div>
             <div class=" d-flex mt-2"> <button class="btn1 btn-dark" (click)="this.nav()">View Quiz Attendees</button> </div>
-            <div *ngIf="!this.isSub" class="text mt-3"> <p>🌱 Quiz Enthusiast 🌱<br>
+            <div *ngIf="!this.isSub" class="text mt-3"> <p> Quiz Enthusiast <br>
                 Hello! I'm here on QuizKR to dive into the world of knowledge and have a blast with quizzes.
                 Every question is a chance to learn something new.
                 Join me on this exciting journey! 📚🧠 #CuriousMind</p>
