--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,38 +1,54 @@
 <head>
-  <meta charset="UTF-8">
-  <title>QUIZKR</title>
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css'>
-  <link rel='stylesheet' href='https://unicons.iconscout.com/release/v2.1.9/css/unicons.css'>
+    <meta charset="UTF-8">
+    <title>QUIZKR</title>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='https://unicons.iconscout.com/release/v2.1.9/css/unicons.css'>
 </head>
-<header >
-    <div class="container-fluid">
-      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <h2 routerLink="">QuizkR</h2>
-        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="http://localhost:4200/" class="nav-link px-1 text-secondary">Home</a></li><br>
+<header>
+    <h3 class="logo" routerLink="">QUIZKR</h3>
+    <nav>
+        <ul class="nav_links">
+            <li><a href="#" style="text-decoration: none; margin-top: 10px;">Home</a></li>
+            <li><a href="#about" style="text-decoration: none; margin-top: 10px;">About</a></li>
         </ul>
-      </div>
-    </div>
-  </header>
+    </nav>
+</header>
+
 <body>
-<div class="section">
-		<div class="container">
-			<div class="row full-height justify-content-center">
-				<div class="col-12 text-center align-self-center py-5">
-					<div class="section pb-5 pt-5 pt-sm-2 text-center">
-						<h6 class="mb-0 pb-3"><span>Log In </span><span>Sign Up</span></h6>
-			          	<input class="checkbox" type="checkbox" id="reg-log" name="reg-log"/>
-			          	<label for="reg-log"></label>
-						<div class="card-3d-wrap mx-auto">
-							<div class="card-3d-wrapper">
-								<div class="card-front">
-									<div class="center-wrap">
-										<div class="section text-center">
-											<h4 class="mb-4 pb-3">Log In</h4>
-											<form (ngSubmit)="this.login()" #loginForm="ngForm" novalidate>
+    <div class="alert success-alert" *ngIf="this.isReg">
+        <div class="icon">&#10004;</div>
+        <h3>{{this.sucMsg}}</h3>
+    </div>
+
+    <div class="alert danger-alert" *ngIf="this.iserror">
+        <div class="icon">&#10060;</div>
+        <h3>{{this.errMsg}}</h3>
+    </div>
+
+    <div class="alert warning-alert" *ngIf="this.iswarn">
+        <div class="icon">&#9888;</div>
+        <h3>{{this.warnMsg}}</h3>
+    </div>
+
+    <div class="section">
+        <div class="container">
+            <div class="row full-height justify-content-center" style="padding-top: 50px;">
+                <div class="col-12 text-center align-self-center py-5">
+                    <div class="section pb-5 pt-5 pt-sm-2 text-center">
+                        <h6 class="mb-0 pb-3"><span>Log In </span><span>Sign Up</span></h6>
+                        <input class="checkbox" type="checkbox" id="reg-log" name="reg-log" />
+                        <label for="reg-log"></label>
+                        <div class="card-3d-wrap mx-auto">
+                            <div class="card-3d-wrapper">
+                                <div class="card-front">
+                                    <div class="center-wrap">
+                                        <div class="section text-center">
+                                            <h4 class="mb-4 pb-3">Log In</h4>
+                                            <form (ngSubmit)="this.login()" #loginForm="ngForm" novalidate>
                                                 <div class="form-group">
-                                                    <input type="text" name="logname" class="form-style" placeholder="Your User Name" id="logname"
-                                                        [(ngModel)]="logname" ngModel #lognameInput="ngModel" autocomplete="off" required>
+                                                    <input type="text" name="logname" class="form-style"
+                                                        placeholder="Your User Name" id="logname" [(ngModel)]="logname"
+                                                        ngModel #lognameInput="ngModel" autocomplete="off" required>
                                                     <i class="input-icon uil uil-at"></i>
                                                     <div *ngIf="lognameInput.invalid && (lognameInput.dirty || lognameInput.touched)"
                                                         class="error-message">
@@ -40,28 +56,34 @@
                                                     </div>
                                                 </div>
                                                 <div class="form-group mt-2">
-                                                    <input type="password" name="logpass" class="form-style" placeholder="Your Password" id="logpass"
-                                                        [(ngModel)]="logpass" ngModel #logpassInput="ngModel" autocomplete="off" required>
+                                                    <input type="password" name="logpass" class="form-style"
+                                                        placeholder="Your Password" id="logpass" [(ngModel)]="logpass"
+                                                        ngModel #logpassInput="ngModel" autocomplete="off" required>
                                                     <i class="input-icon uil uil-lock-alt"></i>
                                                     <div *ngIf="logpassInput.invalid && (logpassInput.dirty || logpassInput.touched)"
                                                         class="error-message">
                                                         Password is required.
                                                     </div>
                                                 </div>
-                                                <button type="submit" class="btn mt-4" [disabled]="loginForm.invalid">Submit</button>
-                                                <p class="mb-0 mt-4 text-center"><a href="#0" class="link">Forgot your password?</a></p>
+                                                <button type="submit" class="btn mt-4"
+                                                    [disabled]="loginForm.invalid">Submit</button>
+                                                <p class="mb-0 mt-4 text-center"><a href="#0" class="link"
+                                                        style="text-decoration: none;">Forgot your
+                                                        password?</a></p>
                                             </form>
                                         </div>
-			      					</div>
-			      				</div>
-								<div class="card-back">
-									<div class="center-wrap">
-										<div class="section text-center">
-											<h4 class="mb-4 pb-3">Sign Up</h4>
-											<form (ngSubmit)="register()" #registrationForm="ngForm" novalidate>
+                                    </div>
+                                </div>
+                                <div class="card-back">
+                                    <div class="center-wrap">
+                                        <div class="section text-center">
+                                            <h4 class="mb-4 pb-3">Sign Up</h4>
+                                            <form (ngSubmit)="register()" #registrationForm="ngForm" novalidate>
                                                 <div class="form-group">
-                                                    <input type="text" name="userName" class="form-style" placeholder="Your Full Name" id="userName"
-                                                        [(ngModel)]="userName" ngModel #userNameInput="ngModel" required>
+                                                    <input type="text" name="userName" class="form-style"
+                                                        placeholder="Your Full Name" id="userName"
+                                                        [(ngModel)]="userName" ngModel #userNameInput="ngModel"
+                                                        (input)="this.check()" required>
                                                     <i class="input-icon uil uil-user"></i>
                                                     <div *ngIf="userNameInput.invalid && (userNameInput.dirty || userNameInput.touched)"
                                                         class="error-message">
@@ -69,8 +91,10 @@
                                                     </div>
                                                 </div>
                                                 <div class="form-group mt-2">
-                                                    <input type="email" name="emailID" class="form-style" placeholder="Your Email" id="emailID"
-                                                        [(ngModel)]="emailID" ngModel #emailIDInput="ngModel" required email>
+                                                    <input type="email" name="emailID" class="form-style"
+                                                        placeholder="Your Email" id="emailID" [(ngModel)]="emailID"
+                                                        ngModel #emailIDInput="ngModel" (input)="this.check()" required
+                                                        email>
                                                     <i class="input-icon uil uil-at"></i>
                                                     <div *ngIf="emailIDInput.invalid && (emailIDInput.dirty || emailIDInput.touched)"
                                                         class="error-message">
@@ -78,17 +102,22 @@
                                                     </div>
                                                 </div>
                                                 <div class="form-group mt-2">
-                                                    <input type="password" name="password" class="form-style" placeholder="Your Password" id="password"
-                                                        [(ngModel)]="password" ngModel #passwordInput="ngModel" required>
+                                                    <input type="password" name="password" class="form-style"
+                                                        placeholder="Your Password" id="password" [(ngModel)]="password"
+                                                        ngModel #passwordInput="ngModel" required>
                                                     <i class="input-icon uil uil-lock-alt"></i>
-                                                    <div *ngIf="passwordInput.invalid && (passwordInput.dirty || passwordInput.touched)" class="error-message">
-                                                        <div *ngIf="passwordInput.hasError('required')">Password is required.</div>
+                                                    <div *ngIf="passwordInput.invalid && (passwordInput.dirty || passwordInput.touched)"
+                                                        class="error-message">
+                                                        <div *ngIf="passwordInput.hasError('required')">Password is
+                                                            required.</div>
                                                         <!-- <div *ngIf="passwordInput.hasError('strongPassword')">Password must contain at least 8 characters with at least one uppercase letter, one lowercase letter, one number, and one special character.</div> -->
                                                     </div>
-                                                </div>                                        
+                                                </div>
                                                 <div class="form-group mt-2">
-                                                    <input type="password" name="cpassword" class="form-style" placeholder="Confirm Password"
-                                                        id="cpassword" [(ngModel)]="cpassword" ngModel #cpasswordInput="ngModel" required>
+                                                    <input type="password" name="cpassword" class="form-style"
+                                                        placeholder="Confirm Password" id="cpassword"
+                                                        [(ngModel)]="cpassword" ngModel #cpasswordInput="ngModel"
+                                                        required>
                                                     <i class="input-icon uil uil-lock-alt"></i>
                                                     <div *ngIf="cpasswordInput.invalid && (cpasswordInput.dirty || cpasswordInput.touched)"
                                                         class="error-message">
@@ -98,16 +127,17 @@
                                                         Passwords do not match.
                                                     </div>
                                                 </div>
-                                                <button type="submit" class="btn mt-4" [disabled]="registrationForm.invalid">Submit</button>
+                                                <button type="submit" class="btn mt-4"
+                                                    [disabled]="this.isValid && registrationForm.invalid">Submit</button>
                                             </form>
                                         </div>
-			      					</div>
-			      				</div>
-			      			</div>
-			      		</div>
-			      	</div>
-		      	</div>
-	      	</div>
-	    </div>
-	</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
